--- a/src/main/resources/templates/main.hbs
+++ b/src/main/resources/templates/main.hbs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>spring-webservice</h1>
+    <h1>spring-webservice V0.0.3</h1>
     <div class="col-md-12">
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#savePostsModal">글 등록</button>
         <br />
